--- a/resources/styles.css
+++ b/resources/styles.css
@@ -5,6 +5,19 @@
   text-length: 32;
 }
 
+.application-fill {
+  fill: fb-cyan;
+}
+.app-gradient-background {
+  fill: fb-blue;
+}
+.foreground-fill {
+  fill: fb-white;
+}
+.background-fill {
+  fill: fb-black;
+}
+
 #background {
   width: 100%;
   height: 100%;
@@ -27,4 +40,19 @@
   width: 100%;
   fill: #222222;
   y: 100%-6;
+}
+
+.bg {
+  x: 0;
+  y: 0;
+  width: 100%;
+  height: 100%;
+  /* fill: white; */
+}
+.touch {
+  x: 0;
+  y: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
