--- a/resources/styles.css
+++ b/resources/styles.css
@@ -62,10 +62,11 @@
 #confirm-text {
   /* width: 100%; */
   height: 20%;
-  x: 50%;
+  x: 5%;
+  width: 90%;
   text-anchor: middle;
   font-size: 24;
-  /* y: 0; */
+  y: 10%;
   z-index: 100;
 }
 
